<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/navy">

    <TextView
        android:id="@+id/titleLogInTextView"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:layout_margin="16dip"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/login_welcome"
        android:textColor="@color/cardview_light_background"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:id="@+id/userNameLogIn"
        android:hint="@string/Username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:textSize="24sp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/titleLogInTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:id="@+id/passwordLogIn"
        android:hint="@string/Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:textSize="24sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/userNameLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/logInButton"
        android:text="@string/Login"
        android:backgroundTint="@color/purple"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/logoutMenuItem"
        android:layout_width="171dp"
        android:layout_height="152dp"
        android:layout_marginTop="560dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>